# project_practice_2024

./: CMakeLists.txt  main.cpp
lw1-2/: abc.cpp  hello.cpp  hello_err.cpp  square_equation.cpp
lw3/: house.cpp  name.cpp  traffic_light.cpp
lw4/: polar_rose.cpp  wave_movement.cpp
